--- a/eCommCleanArchitecture/eComm.API/appsettings.json
+++ b/eCommCleanArchitecture/eComm.API/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnect": ""
+    "DefaultConnect": "Server=LAPTOP-QPOKOEKV;Database=Ecomm;Trusted_Connection=True;TrustServerCertificate=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
@@ -8,5 +8,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Jwt": {
+    "Key": "PUT-YOUR-SECRET-KEY HERE...IT-MUST-BE-SECRET-TO-DEVELOPERS-ONLY",
+    "Issuer": "https://localhost:7284",
+
+    "Audience": "https://localhost:7284"
+  }
 }
